refactor: restructure packages for future GUI support
- Rename Menu class to MenuCLI and move to menu.cli package
- Introduce Menu interface in org.dawciobiel.shelldialog.menu
- Rename console package to cli for better naming consistency
- Update README and examples with new class names and imports